add analytics keyword cloud data
